--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Spin temporary files etc.
+promela/*.trail
+promela/pan*
+promela/_spin_nvr.tmp
